# Breakout

./: CMakeLists.txt  README.md  example_configuration.toml  main.c  main.cpp  prefabs.h
.github/workflows/: build.yml  cmake-single-platform.yml
src/components/: input.h  position.h  renderable.h  velocity.h
src/systems/: input_system.cpp  input_system.h  movement_system.cpp  movement_system.h  render_system.cpp  render_system.h
